--- a/package.json
+++ b/package.json
@@ -12,44 +12,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.2",
-    "@angular/cdk": "^6.0.0",
-    "@angular/common": "^6.1.2",
-    "@angular/compiler": "^6.1.2",
-    "@angular/core": "^6.1.2",
-    "@angular/forms": "^6.1.2",
-    "@angular/http": "^6.1.2",
-    "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "^6.1.2",
-    "@angular/platform-browser-dynamic": "^6.1.2",
-    "@angular/router": "^6.1.2",
-    "angularfire2": "^5.0.0-rc.6",
-    "core-js": "^2.4.1",
-    "firebase": "^4.12.1",
-    "rxjs": "^6.2.2",
-    "rxjs-compat": "^6.2.2",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "core-js": "^2.5.7",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "^6.1.3",
-    "@angular/compiler-cli": "^6.1.2",
-    "@angular/language-service": "^6.1.2",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@angular-devkit/build-angular": "~0.8.5",
+    "@angular/cli": "^6.2.5",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/language-service": "^6.1.10",
+    "@types/jasmine": "~2.8.9",
+    "@types/jasminewd2": "~2.0.5",
+    "@types/node": "~10.11.7",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "~3.2.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "^1.11.1",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.9.2"
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^1.3.1",
+    "prettier": "^1.14.3",
+    "protractor": "~5.4.1",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "2.9.2"
   }
 }
