Introduce generic api request method and do some env changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
       "dom"
     ],
     "module": "es2015",
-    "baseUrl": "./"
+    "baseUrl": "./src",
+    "paths": {
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+    }
   }
 }
