--- a/package.json
+++ b/package.json
@@ -13,30 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
+    "@angular/animations": "^8.0.1",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.14",
-    "@angular/compiler": "^7.2.14",
-    "@angular/core": "^7.2.14",
-    "@angular/forms": "^7.2.14",
-    "@angular/http": "^7.2.14",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "^7.2.14",
-    "@angular/platform-browser-dynamic": "^7.2.14",
-    "@angular/router": "^7.2.14",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "json-server": "^0.14.2",
-    "rxjs": "^6.5.1",
+    "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "^0.9.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.14",
-    "@angular/language-service": "^7.2.14",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/language-service": "^8.0.1",
     "@types/jasmine": "~3.3.12",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~11.13.8",
@@ -52,6 +51,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.1.0",
     "tslint": "~5.16.0",
-    "typescript": "3.2.2"
+    "typescript": "3.4.5"
   }
 }
