--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.1",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^8.0.1",
     "@angular/common": "^8.0.1",
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
     "@angular/forms": "^8.0.1",
-    "@angular/material": "^7.3.7",
+    "@angular/material": "^8.0.1",
     "@angular/platform-browser": "^8.0.1",
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/router": "^8.0.1",
-    "class-transformer": "^0.2.0",
-    "core-js": "^2.5.4",
-    "json-server": "^0.14.2",
+    "class-transformer": "^0.2.3",
+    "core-js": "^3.1.3",
+    "json-server": "^0.15.0",
     "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.1",
-    "tslib": "^1.9.0",
+    "rxjs-compat": "^6.5.2",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -36,10 +36,10 @@
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
-    "@types/jasmine": "~3.3.12",
+    "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~11.13.8",
-    "codelyzer": "^5.0.1",
+    "@types/node": "~12.0.8",
+    "codelyzer": "^5.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -47,10 +47,10 @@
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "prettier": "^1.17.0",
+    "prettier": "^1.18.2",
     "protractor": "~5.4.2",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.16.0",
-    "typescript": "3.4.5"
+    "ts-node": "~8.2.0",
+    "tslint": "~5.17.0",
+    "typescript": "~3.4.5"
   }
 }
